--- a/LibraryManagement/librarymanagement.reactapp/package.json
+++ b/LibraryManagement/librarymanagement.reactapp/package.json
@@ -18,8 +18,10 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "3.35.5",
     "framer-motion": "^7.10.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "1.4.0",
+    "react-axios": "^2.0.6",
     "react-calendar": "^3.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
