--- a/LibraryManagement/librarymanagement.reactapp/package.json
+++ b/LibraryManagement/librarymanagement.reactapp/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
     "tailwindcss-rtl": "^0.9.0",
+    "tw-elements-react": "^1.0.0-alpha1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
