--- a/LibraryManagement/LibraryManagement.API/Properties/launchSettings.json
+++ b/LibraryManagement/LibraryManagement.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "LibraryManagement.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7206;http://localhost:5252",
       "environmentVariables": {
@@ -21,7 +21,7 @@
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
