--- a/LibraryManagement/Utilities/Utilities.csproj
+++ b/LibraryManagement/Utilities/Utilities.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.21" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LibraryManagement.Data\LibraryManagement.Data.csproj" />
   </ItemGroup>
 
