--- a/LibraryManagement/librarymanagement.reactapp/package.json
+++ b/LibraryManagement/librarymanagement.reactapp/package.json
@@ -19,6 +19,7 @@
     "apexcharts": "3.35.5",
     "axios": "^1.5.0",
     "framer-motion": "^7.10.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-apexcharts": "1.4.0",
     "react-calendar": "^3.9.0",
