--- a/LibraryManagement/LibraryManagement.API/appsettings.json
+++ b/LibraryManagement/LibraryManagement.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=localhost\\SQLEXPRESS;Database=LibraryManagement;Trusted_Connection=True;Encrypt=False;"
+    "Default": "Server=localhost\\SQLEXPRESS;Database=LibraryManagement;Trusted_Connection=True;Encrypt=False;Connection Timeout=120"
   },
   "Tokens": {
     "Key": "0123456789ABCDEF",
