--- a/LibraryManagement/librarymanagement.reactapp/package.json
+++ b/LibraryManagement/librarymanagement.reactapp/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^7.10.2",
     "isotope-layout": "^3.0.6",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "1.4.0",
     "react-calendar": "^3.9.0",
@@ -30,6 +31,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
+    "react-toastify": "^9.1.3",
     "sweetalert2": "^11.7.31",
     "tailwindcss-rtl": "^0.9.0",
     "web-vitals": "^2.1.4"
