--- a/LibraryManagement/librarymanagement.reactapp/package.json
+++ b/LibraryManagement/librarymanagement.reactapp/package.json
@@ -33,6 +33,7 @@
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.7.31",
+    "swiper": "^11.0.5",
     "tailwindcss-rtl": "^0.9.0",
     "web-vitals": "^2.1.4"
   },
