--- a/LibraryManagement/librarymanagement.reactapp/package.json
+++ b/LibraryManagement/librarymanagement.reactapp/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.4.0",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
