--- a/LibraryManagement/librarymanagement.reactapp/package.json
+++ b/LibraryManagement/librarymanagement.reactapp/package.json
@@ -9,10 +9,11 @@
     "@chakra-ui/portal": "^2.0.15",
     "@chakra-ui/system": "^2.3.5",
     "@chakra-ui/tooltip": "^2.2.6",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.0",
+    "@mui/material": "^5.15.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -33,6 +34,8 @@
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
     "sweetalert2": "^11.7.31",
     "swiper": "^11.0.5",
     "tailwindcss-rtl": "^0.9.0",
