--- a/LibraryManagement/librarymanagement.reactapp/package.json
+++ b/LibraryManagement/librarymanagement.reactapp/package.json
@@ -29,13 +29,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.4.0",
+    "react-quill": "^2.0.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
-    "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.5",
     "sweetalert2": "^11.7.31",
     "swiper": "^11.0.5",
     "tailwindcss-rtl": "^0.9.0",
